# -

./: CMakeLists.txt  README.md  main_gui.cpp
CampusRPG/: CMakeLists.txt  README.md  main.cpp  tasks.txt
CampusRPG/include/: Character.h  Database.h  Equipment.h  Food.h  Inventory.h  Item.h  Medicine.h  Shop.h
CampusRPG/lib/: sqlite3.c  sqlite3.h
CampusRPG/src/: Character.cpp  Database.cpp  Equipment.cpp  Food.cpp  Inventory.cpp  Item.cpp  Medicine.cpp  Shop.cpp
RPGProject/: CMakeLists.txt  main_gui.cpp
RPGProject/backup/: Character.cpp  main_gui.cpp
RPGProject/data/: enemies.txt  player_save.txt
RPGProject/include/: BaseCharacter.h  BattleSystem.h  Character.h  Enemy.h  GameConfig.h  LevelSystem.h  Player.h  SaveManager.h  Skill.h
RPGProject/src/: BaseCharacter.cpp  BattleSystem.cpp  GameManager.cpp  LevelSystem.cpp  Player.cpp  SaveManager.cpp  Skill.cpp
backup/: Character.cpp  Character.h  main_gui.cpp
battle_app/: CMakeLists.txt  main.cpp
battle_app/data/: tasks.txt
battle_app/include/: BattleSystem.h  Character.h  ConsoleUI.h  Database.h  Enemy.h  Equipment.h  Food.h  GameConfig.h  GameManager.h  IGameUI.h  Inventory.h  Item.h  Medicine.h  Shop.h
battle_app/lib/: sqlite3.c  sqlite3.h
battle_app/src/: BattleSystem.cpp  Character.cpp  ConsoleUI.cpp  Database.cpp  Enemy.cpp  Equipment.cpp  Food.cpp  GameManager.cpp  Inventory.cpp  Item.cpp  Medicine.cpp  Shop.cpp  TaskSystem.cpp
console_app/: CMakeLists.txt  main.cpp
console_app/include/: Character.h  Database.h  Equipment.h  Food.h  Inventory.h  Item.h  Medicine.h  Shop.h  Task.h  TaskSystem.h
console_app/src/: Character.cpp  Database.cpp  Equipment.cpp  Food.cpp  Inventory.cpp  Item.cpp  Medicine.cpp  Shop.cpp  Task.cpp  TaskSystem.cpp
data/: player_save.txt
gui_app/: CMakeLists.txt  main.cpp  resources.rc
gui_app/data/: shop_items.txt
gui_app/include/: BaseCharacter.h  Equipment.h  Food.h  Inventory.h  Item.h  Medicine.h  Player.h  SaveManager.h  Shop.h  TaskSystem.h
gui_app/src/: BaseCharacter.cpp  Equipment.cpp  Food.cpp  Inventory.cpp  Item.cpp  LevelSystem.cpp  Medicine.cpp  Player.cpp  SaveManager.cpp  Shop.cpp  TaskSystem.cpp
include/: BaseCharacter.h  BattleSystem.h  Character.h  ConsoleUI.h  EasyXRenderer.h  Enemy.h  GameConfig.h  GameManager.h  IGameUI.h  LevelSystem.h  Player.h  SaveManager.h  Skill.h
shared/: CMakeLists.txt
shared/include/: AutoSaveService.h
shared/src/: AutoSaveService.cpp
src/: BaseCharacter.cpp  BattleSystem.cpp  Character.cpp  ConsoleUI.cpp  EasyXRenderer.cpp  Enemy.cpp  GameManager.cpp  LevelSystem.cpp  Player.cpp  SaveManager.cpp  Skill.cpp
